--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-            <version>3.0.0</version>
+            <version>2.2.0.RELEASE</version>
         </dependency>
     </dependencies>
     <build>
