--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -45,6 +45,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>app</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
