--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cloud_order?useSSL=false
+    url: jdbc:mysql://mysql:3306/cloud_order?useSSL=false
     username: root
     password: 247108
     driver-class-name: com.mysql.jdbc.Driver
@@ -10,7 +10,7 @@ spring:
     name: orderservice
   cloud:
     nacos:
-      server-addr: localhost:8848 #nacos服务地址
+      server-addr: nacos:8848 #nacos服务地址
       discovery:
         cluster-name: HZ
 #        namespace: 8400a153-e23c-4a51-b3a2-b2cd4f81e0d6 #dev环境
